--- a/poster.tex
+++ b/poster.tex
@@ -279,8 +279,7 @@ ABLA is a fission and evaporation code that is developed at GSI, Darmstadt.
     hadronic cascade and ABLA de-excitation codes in Geant4},
   Proceedings of the 41th Annual Meeting of the Finnish Physical
   Society (2007)
-%\bibitem{g4physref} \emph{Geant4 Physics Reference Manual -- version
-%    Geant4 9.1} available at {\tt http://\-cern.ch/\-geant4}
+\bibitem{g4} \emph{Geant4 collaboration website} {\tt http://\-cern.ch/\-geant4}
 \bibitem{g4incl} \emph{Geant4 Physics Reference Manual: INCL 4.2 Cascade and ABLA V3 Evaporation with Fission} {\tt http://geant4.web.cern.ch/\-geant4/\-UserDocumentation/\-UsersGuides/\-PhysicsReferenceManual/\-html/\-node185.html}
 %\bibliographystyle{abbrv}
 %\bibliography{latex_poster}
