--- a/poster.tex
+++ b/poster.tex
@@ -263,7 +263,8 @@ model good agreement with experimental data. ({\emph Courtesy of
 \section*{{\Huge {\sf ACKNOWLEDGEMENTS}}}
 
 This work is a collaborative effort with the original developers from
-Li\`ege University, GSI and CEA. We acknowledge the help from %\todo{names}
+Li\`ege University, GSI and CEA. We acknowledge the help from J. Cugnon,
+A. Boudard, Y. Yariv, S. Leray, C. Schmidt and K. H. Schmidt.
 converting the original FORTRAN codes C++ language.
 
 \end{textbox}
