--- a/poster.tex
+++ b/poster.tex
@@ -121,7 +121,7 @@
 We present first implementation \cite{fp} of hadronic cascade model INCL 4.2
 \cite{incl} and evaporation model ABLA V3 \cite{abla} in Geant4 9.1 \cite{g4}.
 \vskip0.5cm
-INCL and ABLA models play an important role in simulating the behaviour of high energy physics
+INCL and ABLA models play an important role in simulating the behavior of high energy physics
 detector systems such as Compact Muon Solenoid experiment at LHC:
 \begin{itemize}
 \item improving shielding
@@ -149,7 +149,7 @@ applications these models are typically used for spallation studies.
 % framework making further development of these models possible. (TODO:)
 
 %One feature of INCL is low number of free model parameters.
-%The most imporant parameter of INCL is the stopping time, $t_{stop}$,
+%The most important parameter of INCL is the stopping time, $t_{stop}$,
 }
 
 \end{textbox}
