--- a/poster.tex
+++ b/poster.tex
@@ -271,7 +271,7 @@ converting the original FORTRAN codes C++ language.
 \vskip2cm
 \begin{textbox}
 
-{\large
+{\Large
 \addcontentsline{toc}{section}{References}
 \begin{thebibliography}{9}
 \bibitem{incl} A. Boudard et al., \emph{Intranuclear cascade model for
