--- a/poster.tex
+++ b/poster.tex
@@ -170,7 +170,7 @@ t_{stop} = f_{stop}t_0 (A_{target}/208) ^{0.16}.
 \end{equation}
 \end{itemize}
 Here $A_{target}$ is the target mass number, $t_0 = 70 fm/c$, and
-$f_{stop}$ is a scaling factor for the stopping time \cite{g4physref}.
+$f_{stop}$ is a scaling factor for the stopping time \cite{g4incl}.
 % Good default value for this factor is $f_{stop}$ = 1.0
 
 
