Added ref to experimental data.

--- a/poster.tex
+++ b/poster.tex
@@ -288,6 +288,9 @@ converting the original FORTRAN codes C++ language.
   Society (2007)
 \bibitem{g4} \emph{Geant4 collaboration website} {\tt http://\-cern.ch/\-geant4}
 \bibitem{g4incl} \emph{Geant4 Physics Reference Manual: INCL 4.2 Cascade and ABLA V3 Evaporation with Fission} {\tt http://geant4.web.cern.ch/\-geant4/\-UserDocumentation/\-UsersGuides/\-PhysicsReferenceManual/\-html/\-node185.html}
+\bibitem{data} X.Ledoux et al., \emph{Spallation Neutron Production by
+  0.8, 1.2, and 1.6 GeV Protons on Pb Targets} Phys. Rev. Lett. 82
+  (1999)
 %\bibliographystyle{abbrv}
 %\bibliography{latex_poster}
 \end{thebibliography}
