--- a/poster.tex
+++ b/poster.tex
@@ -174,8 +174,12 @@ t_{stop} = f_{stop}t_0 (A_{target}/208) ^{0.16}.
 \end{itemize}
 Here $A_{target}$ is the target mass number, $t_0 = 70 fm/c$, and
 $f_{stop}$ is a scaling factor for the stopping time \cite{g4incl}.
-% Good default value for this factor is $f_{stop}$ = 1.0
+\vskip0.5cm
 
+The number of parameters is kept low in order to have as much
+predictive power as possible.
+
+% Good default value for this factor is $f_{stop}$ = 1.0
 
 \end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
