Better caption for fig.

--- a/poster.tex
+++ b/poster.tex
@@ -207,16 +207,18 @@ ABLA is a fission and evaporation code that is developed at GSI, Darmstadt.
 %\begin{textbox}
 
 
-\section*{{\Huge {\sf p(1.2 GeV) + Pb $\rightarrow$ n + X}}}
-
-Validating double-differential for neutron production from Geant4 INCL
-and ABLA models. Evaporation from ABLA model is shown below E $\simeq$
-20 MeV.
-
+%\section*{{\Huge {\sf p(1.2 GeV) + Pb $\rightarrow$ n + X}}}
+%\vskip-1.5cm
 %\begin{figure}
+{\Huge {\sf p(1.2 GeV) + Pb $\rightarrow$ n + X}}
 \includegraphics[scale=0.70]{images/pPbDD.eps}
 %\label{fig:pPbdd1200MeV}
 %\end{figure}
+{\Large {\sf Validating double-differential for neutron production
+    from Geant4 INCL and ABLA models. Evaporation from ABLA model is
+    shown below E $\simeq$ 20 MeV. Red and black histograms are the
+    C++ and FORTRAN results, respectively. Data points (blue dots) are
+    from \cite{data}.}}
 
 %\end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
