INCL/ABLA = LIEGE in Vladimir's fig.

--- a/poster.tex
+++ b/poster.tex
@@ -259,7 +259,7 @@ emission, and
 \section*{{\Huge {\sf }}}
 
 \includegraphics[scale=0.45]{images/vladimir.eps}
-{\Large {\sf Comparison of various cascade models in Geant4. INCL/ABLA precision
+{\Large {\sf Comparison of various cascade models in Geant4. INCL/ABLA (Li\`ege) precision
 model good agreement with experimental data. ({\emph Courtesy of
     V. Ivanchenko, Geant4 collaboration}).}}
 
