Removed almost empty ABLA textbox.

--- a/poster.tex
+++ b/poster.tex
@@ -194,15 +194,15 @@ predictive power as possible.
 
 %\end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{textbox}
+%\begin{textbox}
 
 
-\section*{{\Huge {\sf ABLA MODEL FOR EVAPO\-RATI\-ON AND FISSION}}}
+%\section*{{\Huge {\sf ABLA MODEL FOR EVAPO\-RATI\-ON AND FISSION}}}
 %\section*{\color{udsect} ABLA}
 
-ABLA is a fission and evaporation code that is developed at GSI, Darmstadt.
+%ABLA is a fission and evaporation code that is developed at GSI, Darmstadt.
 
-\end{textbox}
+%\end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\begin{textbox}
 
