Add title describing the Geant4 system test results.

--- a/poster.tex
+++ b/poster.tex
@@ -256,7 +256,8 @@ emission, and
 \end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section*{{\Huge {\sf }}}
+%\section*{{\Huge {\sf }}}
+{\Huge {\sf p(0.8 GeV) + Pb $\rightarrow$ n + X}}
 
 \includegraphics[scale=0.45]{images/vladimir.eps}
 {\Large {\sf Comparison of various cascade models in Geant4. INCL/ABLA (Li\`ege) precision
