--- a/poster.tex
+++ b/poster.tex
@@ -207,26 +207,16 @@ predictive power as possible.
 %\begin{textbox}
 
 
-%\section*{{\Huge {\sf p(1.2 GeV) + Pb $\rightarrow$ n + X}}}
-%\vskip-1.5cm
-%\begin{figure}
-{\Huge {\sf p(1.2 GeV) + Pb $\rightarrow$ n + X}}
-\includegraphics[scale=0.70]{images/pPbDD.eps}
-%\label{fig:pPbdd1200MeV}
-%\end{figure}
-{\Large {\sf Validating double-differential for neutron production
-    from Geant4 INCL and ABLA models. Evaporation from ABLA model is
-    shown below E $\simeq$ 20 MeV. Red and black histograms are the
-    C++ and FORTRAN results, respectively. Data points (blue dots) are
-    from \cite{data}.}}
-
 %\end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{textbox}
 
 
 \section*{{\Huge {\sf ABLA EVAPORATION}}}
-The probabilities for emission of particle type $j = {p, n, \alpha}$
+ABLA is an evaporation and fission code developed at GSI, Darmstadt.
+\vskip0.5cm
+
+The probabilities for emission of particle type $j$ = \{$p$, $n$, $\alpha$\}
 are calculated using formula:
 \begin{equation}
 W_j(N,Z,E) = \frac{\Gamma_j(N,Z,E)}{\sum_k\Gamma_k(N,Z,E)},
@@ -255,6 +245,21 @@ emission, and
 \end{itemize}
 \end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%\section*{{\Huge {\sf p(1.2 GeV) + Pb $\rightarrow$ n + X}}}
+%\vskip-1.5cm
+%\begin{figure}
+%\vskip3.5cm
+{\Huge {\sf p(1.2 GeV) + Pb $\rightarrow$ n + X}}
+\includegraphics[scale=0.70]{images/pPbDD.eps}
+%\label{fig:pPbdd1200MeV}
+%\end{figure}
+\vskip-0.3cm
+{\Large {\sf Validating double-differential for neutron production
+    from Geant4 INCL and ABLA models. Evaporation from ABLA model is
+    shown below E $\simeq$ 20 MeV. Red and black histograms are the
+    C++ and FORTRAN results, respectively. Data points (blue dots) are
+    from \cite{data}.}}
 
 %\section*{{\Huge {\sf }}}
 {\Huge {\sf p(0.8 GeV) + Pb $\rightarrow$ n + X}}
