Moved PbDD fig. back up for easier layout.
Still, the fig might look better on the bottom.

--- a/poster.tex
+++ b/poster.tex
@@ -205,7 +205,20 @@ predictive power as possible.
 %\end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\begin{textbox}
-
+%\section*{{\Huge {\sf p(1.2 GeV) + Pb $\rightarrow$ n + X}}}
+%\vskip-1.5cm
+%\begin{figure}
+\vskip3.5cm
+{\Huge {\sf p(1.2 GeV) + Pb $\rightarrow$ n + X}}
+\includegraphics[scale=0.70]{images/pPbDD.eps}
+%\label{fig:pPbdd1200MeV}
+%\end{figure}
+\vskip-0.3cm
+{\Large {\sf Double-differential for neutron production cross section
+    from Geant4 INCL and ABLA models. Evaporation from ABLA model is
+    shown below E $\simeq$ 20 MeV. Red and black histograms are the
+    C++ and FORTRAN results, respectively. Data points (blue dots) are
+    from \cite{data}.}}
 
 %\end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -245,21 +258,6 @@ emission, and
 \end{itemize}
 \end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\section*{{\Huge {\sf p(1.2 GeV) + Pb $\rightarrow$ n + X}}}
-%\vskip-1.5cm
-%\begin{figure}
-%\vskip3.5cm
-{\Huge {\sf p(1.2 GeV) + Pb $\rightarrow$ n + X}}
-\includegraphics[scale=0.70]{images/pPbDD.eps}
-%\label{fig:pPbdd1200MeV}
-%\end{figure}
-\vskip-0.3cm
-{\Large {\sf Validating double-differential for neutron production
-    from Geant4 INCL and ABLA models. Evaporation from ABLA model is
-    shown below E $\simeq$ 20 MeV. Red and black histograms are the
-    C++ and FORTRAN results, respectively. Data points (blue dots) are
-    from \cite{data}.}}
 
 %\section*{{\Huge {\sf }}}
 {\Huge {\sf p(0.8 GeV) + Pb $\rightarrow$ n + X}}
