--- a/poster.tex
+++ b/poster.tex
@@ -118,7 +118,7 @@
 %% \end{center}
 
 {\color{udsect}
-We present first implementation \cite{fp} of hadronic cascade model INCL 4.2
+We present the first implementation \cite{fp} of the hadronic cascade model INCL 4.2
 \cite{incl} and evaporation model ABLA V3 \cite{abla} in Geant4 9.1 \cite{g4}.
 \vskip0.5cm
 INCL and ABLA models play an important role in simulating the behavior of high energy physics
