--- a/poster.tex
+++ b/poster.tex
@@ -121,15 +121,16 @@
 We present the first implementation \cite{fp} of the hadronic cascade model INCL 4.2
 \cite{incl} and evaporation model ABLA V3 \cite{abla} in Geant4 9.1 \cite{g4}.
 \vskip0.5cm
-INCL and ABLA models play an important role in simulating the behavior of high energy physics
-detector systems such as Compact Muon Solenoid experiment at LHC:
+
+INCL and ABLA models play an important role in nuclear physics
+applications, especially in spallation reaction simulations.  The
+inclusion of these models into Geant4 makes it possible to use them
+for LHC detector simulations. Additional uses for the models are:
 \begin{itemize}
 \item improving shielding
 \item understanding radiation damage, and
 \item activation and background studies
 \end{itemize}
-In nuclear physics
-applications these models are typically used for spallation studies.
 }
 
 \end{textbox}
