The names of the codes in \sf style.

--- a/poster.tex
+++ b/poster.tex
@@ -96,7 +96,7 @@
 	\hspace{0.6cm}
    \parbox[c]{0.8\linewidth}{
 		\begin{center}
-			\textbf{\Huge INCL4 CASCADE AND ABLA EVAPORATION CODES IN GEANT4} \\[0.5em]
+			\textbf{\Huge {\sf INCL4} CASCADE AND {\sf ABLA} EVAPORATION CODES IN {\sf GEANT4}} \\[0.5em]
 			\textbf{\LARGE Aatos Heikkinen, Pekka Kaitaniemi$^{\dagger}$} \\[0.3em]
 			{\Large $^{\dagger}$ {\tt kaitanie@cc.helsinki.fi}} \\
                         {\textsc Helsinki Institute of Physics, P.O.B. 64, FIN-00014 University of Helsinki, Finland}
@@ -118,13 +118,13 @@
 %% \end{center}
 
 {\color{udsect}
-We present the first implementation \cite{fp} of the hadronic cascade model INCL 4.2
-\cite{incl} and evaporation model ABLA V3 \cite{abla} in Geant4 9.1 \cite{g4}.
+We present the first implementation \cite{fp} of the hadronic cascade model {\sf INCL 4.2}
+\cite{incl} and evaporation model {\sf ABLA V3} \cite{abla} in {\sf Geant4 9.1} \cite{g4}.
 \vskip0.5cm
 
-INCL and ABLA models play an important role in nuclear physics
+{\sf INCL} and {\sf ABLA} models play an important role in nuclear physics
 applications, especially in spallation reaction simulations.  The
-inclusion of these models into Geant4 makes it possible to use them
+inclusion of these models into {\sf Geant4} makes it possible to use them
 for LHC detector simulations. Additional uses for the models are:
 \begin{itemize}
 \item improving shielding
@@ -143,7 +143,7 @@ for LHC detector simulations. Additional uses for the models are:
 \section*{{\Huge {\sf INCL PARAMETERS}}}
 %\section*{\textbf{\Large\color{udsubsect}\underline{INCL parameters}}}
 
-INCL introduces \emph{only two free parameters}:
+{\sf INCL} introduces \emph{only two free parameters}:
 \begin{itemize}
 \item potential depth and
 \item stopping time
@@ -196,9 +196,9 @@ predictive power as possible.
 %\end{figure}
 \vskip-0.3cm
 {\Large {\sf Double-differential for neutron production cross section
-    from Geant4 INCL and ABLA models. Evaporation from ABLA model is
+    from {\sf Geant4} {\sf INCL} and {\sf ABLA} models. Evaporation from {\sf ABLA} model is
     shown below E $\simeq$ 20 MeV. Red and black histograms are the
-    C++ and FORTRAN results, respectively. Data points (blue dots) are
+    {\sf C++} and {\sf FORTRAN} results, respectively. Data points (blue dots) are
     from \cite{data}.}}
 
 %\end{textbox}
@@ -207,7 +207,7 @@ predictive power as possible.
 
 
 \section*{{\Huge {\sf ABLA EVAPORATION}}}
-ABLA is an evaporation and fission code developed at GSI, Darmstadt.
+{\sf ABLA} is an evaporation and fission code developed at GSI, Darmstadt.
 \vskip0.5cm
 
 The probabilities for emission of particle type $j$ = \{$p$, $n$, $\alpha$\}
@@ -244,8 +244,8 @@ emission, and
 {\Huge {\sf p(0.8 GeV) + Pb $\rightarrow$ n + X}}
 
 \includegraphics[scale=0.45]{images/vladimir.eps}
-{\Large {\sf Comparison of various cascade models in Geant4. INCL/ABLA (Li\`ege) precision
-model good agreement with experimental data. ({\emph Courtesy of
+{\Large {\sf Comparison of various cascade models in {\sf Geant4}. {\sf INCL/ABLA} (Li\`ege) precision
+model good agreement with experimental data. (\emph{Courtesy of
     V. Ivanchenko, Geant4 collaboration}).}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -255,9 +255,9 @@ model good agreement with experimental data. ({\emph Courtesy of
 \section*{{\Huge {\sf ACKNOWLEDGEMENTS}}}
 
 This work is a collaborative effort with the original developers from
-Li\`ege University, GSI and CEA. We acknowledge the help from J. Cugnon,
-A. Boudard, Y. Yariv, S. Leray, C. Schmidt and K. H. Schmidt.
-converting the original FORTRAN codes C++ language.
+Li\`ege University, GSI and CEA. We acknowledge the help from J.~Cugnon,
+A.~Boudard, Y.~Yariv, S.~Leray, C.~Schmidt and K.~H.~Schmidt.
+converting the original {\sf FORTRAN} codes {\sf C++} language.
 
 \end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
