--- a/poster.tex
+++ b/poster.tex
@@ -72,7 +72,6 @@
 \newcommand{\masyv}{\texttt{MASyV}\xspace}
 \newcommand{\cimmsim}{\texttt{CImmSim}\xspace}
 \newcommand{\maimmune}{\texttt{ma\_immune}\xspace}
-
 \begin{document}
 \huge
 \begin{center}
@@ -103,7 +102,7 @@
                         \vskip2cm
 		\end{center}
 	}
-	\parbox[c]{5.3cm}{\includegraphics[width=5cm]{images/g4logo.eps}}
+	\parbox[c]{5.3cm}{\hspace{-1.0cm} \includegraphics[width=5.6cm]{images/g4logo.eps}}
 %}}
 % Helsinki Institute of Physics, P.O.B. 64, FIN-00014 University of Helsinki, Finland
 % email: pekka.kaitaniemi@helsinki.fi
@@ -117,37 +116,34 @@
 %% \textsf{\Large\color{udsubsect}\underline{ABSTRACT}}
 %% \end{center}
 
-{\color{udsect}
-We present the first implementation \cite{fp} of the hadronic cascade model {\sf INCL 4.2}
-\cite{incl} and evaporation model {\sf ABLA V3} \cite{abla} in {\sf Geant4 9.1} \cite{g4}.
+We introduce the first implementation \cite{fp} of the hadronic cascade model {\sf INCL 4.2}
+\cite{incl} and evaporation/fission model {\sf ABLA V3} \cite{abla} in {\sf Geant4 9.1} detector simulation toolkit \cite{g4}.
 \vskip0.5cm
 
-{\sf INCL} and {\sf ABLA} models play an important role in nuclear physics
-applications, especially in spallation reaction simulations.  The
-inclusion of these models into {\sf Geant4} makes it possible to use them
-for LHC detector simulations. Additional uses for the models are:
+% FIXME ``makes it possible''
+{\sf INCL} and {\sf ABLA} codes provide microscopic models especially validated for simulation of spallation reactions.  The
+inclusion of these models in {\sf Geant4} makes it possible to use them
+for LHC detector simulations. Additional uses for the models include:
 \begin{itemize}
-\item improving shielding
+\item shielding studies,
 \item understanding radiation damage, and
-\item activation and background studies
+\item activation and background studies.
 \end{itemize}
-}
 
 \end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\includegraphics[scale=0.73]{images/cascade.eps}
+\hspace{-1cm} \includegraphics[scale=0.73]{images/cascade.eps}
 
 \begin{textbox}
 
 \section*{{\Huge {\sf INCL PARAMETERS}}}
 %\section*{\textbf{\Large\color{udsubsect}\underline{INCL parameters}}}
-
-{\sf INCL} introduces \emph{only two free parameters}:
+{\color{udsect}
+Li\`ege intra-nuclear cascade, {\sf INCL}, \cite{incl} requires \emph{only two free parameters}:
 \begin{itemize}
-\item potential depth and
-\item stopping time
-$t_{stop}$, defined as the point in time when the cascade is
+\item potential depth, and
+\item stopping time, $t_{stop}$, defined as the point in time when the cascade is
 finished and evaporation starts:
 \begin{equation}
 t_{stop} = f_{stop}t_0 (A_{target}/208) ^{0.16}.
@@ -158,8 +154,8 @@ $f_{stop}$ is a scaling factor for the stopping time \cite{g4incl}.
 \vskip0.5cm
 
 The number of parameters is kept low in order to have as much
-predictive power as possible.
-
+\emph{predictive power} as possible.
+}
 % Good default value for this factor is $f_{stop}$ = 1.0
 
 \end{textbox}
@@ -195,11 +191,12 @@ predictive power as possible.
 %\label{fig:pPbdd1200MeV}
 %\end{figure}
 \vskip-0.3cm
-{\Large {\sf Double-differential for neutron production cross section
-    from {\sf Geant4} {\sf INCL} and {\sf ABLA} models. Evaporation from {\sf ABLA} model is
-    shown below E $\simeq$ 20 MeV. Red and black histograms are the
-    {\sf C++} and {\sf FORTRAN} results, respectively. Data points (blue dots) are
-    from \cite{data}.}}
+% FIXME linespread
+{\Large {\sf {\linespread{1.5} Double-differential for neutron production cross section
+    from {\sf Geant4} {\sf INCL} and {\sf ABLA} models. Neutron evaporation from {\sf ABLA} model is
+    shown below E $\simeq$ 20 MeV. Black and red histograms are the
+    results from the original {\sf FORTRAN} version and new {\sf C++} implementation, respectively. Blue data points are
+    from Ref.~\cite{data}.}}}
 
 %\end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -207,7 +204,8 @@ predictive power as possible.
 
 
 \section*{{\Huge {\sf ABLA EVAPORATION}}}
-{\sf ABLA} is an evaporation and fission code developed at GSI, Darmstadt.
+{\color{udsect}
+The ablation code {\sf ABLA} \cite{abla} for evaporation and fission modeling is developed at GSI, Darmstadt.
 \vskip0.5cm
 
 The probabilities for emission of particle type $j$ = \{$p$, $n$, $\alpha$\}
@@ -216,11 +214,11 @@ are calculated using formula:
 W_j(N,Z,E) = \frac{\Gamma_j(N,Z,E)}{\sum_k\Gamma_k(N,Z,E)},
 \label{eqn:probabilities}
 \end{equation}
-where $\Gamma_j$ is emission width for particle $j$, $N$ is neutron
+where $N$ is neutron
 number, $Z$ charge number and $E$ excitation energy.
 \vskip0.5cm
 
-Emission widths are calculated using the following formula:
+The emission width, $\Gamma_j$, for particle $j$ is defined as:
 \index{emission width}
 \begin{equation}
 \Gamma_j = \frac{1}{2 \pi \rho_c(E)} \frac{4 m_j R^2}{\hbar^2} T_j^2 \rho_j(E - S_j - B_j),
@@ -230,13 +228,14 @@ where:
 \begin{itemize}
 \item $\rho_c(E)$ and $\rho_j(E - S_j - B_j)$ are the level densities
 of the compound nucleus and the exit channel, respectively.
-\item $B_j$ is the height of the Coulomb barrier,
+\item $B_j$ the height of the Coulomb barrier,
 \item $S_j$ the separation energy,
-\item $R$ is the radius,
+\item $R$ the radius,
 \item $T_j$ the temperature of the remnant nucleus after
 emission, and
 \item $m_j$ the mass of the emitted particle.
 \end{itemize}
+}
 \end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -244,9 +243,9 @@ emission, and
 {\Huge {\sf p(0.8 GeV) + Pb $\rightarrow$ n + X}}
 
 \includegraphics[scale=0.45]{images/vladimir.eps}
-{\Large {\sf Comparison of various cascade models in {\sf Geant4}. {\sf INCL/ABLA} (Li\`ege) precision
-model good agreement with experimental data. (\emph{Courtesy of
-    V. Ivanchenko, Geant4 collaboration}).}}
+{\Large {\sf Comparison of various models in {\sf Geant4}. Li\`ege cascade together with ABLA (label ``LIEGE'') is compared against experimental data and other {\sf Geant4} models (BIC, BERT, RPG).
+ {\sf INCL/ABLA} simulation is in good agreement with experimental data. (\emph{Courtesy of
+    V. Ivantchenko, Geant4 collaboration}.)}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{textbox}
@@ -254,10 +253,10 @@ model good agreement with experimental data. (\emph{Courtesy of
 
 \section*{{\Huge {\sf ACKNOWLEDGEMENTS}}}
 
-This work is a collaborative effort with the original developers from
+This work has been a collaborative effort with the original developers from
 Li\`ege University, GSI and CEA. We acknowledge the help from J.~Cugnon,
-A.~Boudard, Y.~Yariv, S.~Leray, C.~Schmidt and K.~H.~Schmidt.
-converting the original {\sf FORTRAN} codes {\sf C++} language.
+A.~Boudard, Y.~Yariv, S.~Leray, C.~Schmidt and K.~H.~Schmidt
+on reimplementing the original {\sf FORTRAN} codes in {\sf C++} language.
 
 \end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -277,8 +276,8 @@ converting the original {\sf FORTRAN} codes {\sf C++} language.
 \bibitem{abla} J. Benlliure et al., \emph{Calculated nuclide
     production yields in relativistic collisions of fissile nuclei},
   Nuc. Phys. A628 (1998) 458
-\bibitem{g4} \emph{Geant4 collaboration website} {\tt http://\-cern.ch/\-geant4}
-\bibitem{g4incl} \emph{Geant4 Physics Reference Manual: INCL 4.2 Cascade and ABLA V3 Evaporation with Fission} {\tt http://geant4.web.cern.ch/\-geant4/\-UserDocumentation/\-UsersGuides/\-PhysicsReferenceManual/\-html/\-node185.html}
+\bibitem{g4} \emph{Geant4 collaboration website} \\ {\tt http://\-cern.ch/\-geant4}
+\bibitem{g4incl} \emph{Geant4 Physics Reference Manual: INCL~4.2 Cascade and ABLA~V3 Evaporation with Fission} \\ {\tt http://geant4.web.cern.ch/\-geant4/\-UserDocumentation/\-UsersGuides/\-PhysicsReferenceManual/\-html/\-node185.html}
 \bibitem{data} X.Ledoux et al., \emph{Spallation Neutron Production by
   0.8, 1.2, and 1.6 GeV Protons on Pb Targets} Phys. Rev. Lett. 82
   (1999)
