--- a/ah09aProceedings.tex
+++ b/ah09aProceedings.tex
@@ -192,7 +192,7 @@ Something
 
 \usepackage{makeidx}
 \usepackage{fancyhdr}
-\usepackage{asymptote}
+%\usepackage{asymptote}
 \usepackage{amsmath}
 \usepackage{eurosym} % euros
 
