Replace DAPNIA with new name IRFU

--- a/ah09aProceedings.tex
+++ b/ah09aProceedings.tex
@@ -244,7 +244,7 @@ Something
 \affiliation{Helsinki Institute of Physics, P.O. Box 64, FIN-00014 University of Helsinki, Finland}
 
 \author{A. Boudard}
-\affiliation{CEN-Saclay, CEA-DAPNIA/SPhN, 91 191 Gif sur Yvette, France}
+\affiliation{CEN-Saclay, CEA-IRFU/SPhN, 91 191 Gif sur Yvette, France}
 
 \author{G.~Folger}
 \affiliation{European Organization for Nuclear Research (CERN) Switzerland}
