Mention spallation in the title

--- a/ah09aProceedings.tex
+++ b/ah09aProceedings.tex
@@ -235,7 +235,7 @@ Something
 \begin{document}
 %\title{Geant4 physics list for applications to spallation reactions in ADS
 
-\title{A Geant4 physics list for nuclear physics applications based on INCL and ABLA models
+\title{A Geant4 physics list for spallation and related nuclear physics applications based on INCL and ABLA models
 \footnote{Paper \cite{ah09aProceedings} in preparation for CHEP 2009, 21 - 27 March 2009 Prague, Czech Republic\\
 \url{http://www.particle.cz/conferences/chep2009/}}}
 %\title{A Geant4 physics list for spallation reactions}
