New text from Alain

--- a/ah09aProceedings.tex
+++ b/ah09aProceedings.tex
@@ -250,11 +250,19 @@ Something
 \affiliation{European Organization for Nuclear Research (CERN) Switzerland}
 
 \begin{abstract}
-We present a new Geant4 physics list prepared for nuclear physics applications.
+We present a new Geant4 physics list prepared for nuclear physics applications
+in a domain dominated by spallation.
+This means that the model is well established for targets heavier than Aluminium
+and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV. Outside this domain
+(light nuclei and energies down to 20-30 MeV)
+the model can be tried but the capabilities have yet to be established.
 We discuss new Geant4 models based on translation of INCL and ABLA codes used in the physic list 
 and give examples of physics performance.
-Suitability of these models for nuclear physics applications are demonstrated 
-particularly from the perspective of spallation and neutron cross section observables.
+Suitability of these models are demonstrated in the perspective of accelerator driven systems
+and EURISOL future project especially with the neutron double differential cross sections and residual
+nuclei production.
+Improvements of the physics model are foreseen for the treatment of light targets (C - O)
+and light ion beams (up to C) and will be discussed.
 An example application utilizing the physics list is introduced.
 %such as spallation reactions in Accelerator Driven Systems.
 \end{abstract}
