--- a/ah09aProceedings.tex
+++ b/ah09aProceedings.tex
@@ -256,8 +256,7 @@ This means that the model is well established for targets heavier than Aluminium
 and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV. Outside this domain
 (light nuclei and energies down to 20-30 MeV)
 the model can be tried but the capabilities have yet to be established.
-We discuss new Geant4 models based on translation of INCL and ABLA codes used in the physic list 
-and give examples of physics performance.
+We discuss new Geant4 models based on translation of INCL and ABLA codes in C++ and used in the physic list.
 Suitability of these models are demonstrated in the perspective of accelerator driven systems
 and EURISOL future project especially with the neutron double differential cross sections and residual
 nuclei production.
