Include notes in the document

--- a/ah09aProceedings.tex
+++ b/ah09aProceedings.tex
@@ -647,6 +647,9 @@ The double differential cross-sections for neutrons at angles of $7.5^{\circ}$, 
 
 \clearpage
 \subsubsection{References and notes}
+
+\input{notes.tex}
+
 \bibliographystyle{plain}  % Options plain, unsrt, alpha, abbrv
 
 \bibliography{refs.bib} %10 p
