--- a/ah09aProceedings.tex
+++ b/ah09aProceedings.tex
@@ -584,7 +584,7 @@ Some text(normal size)
 
 Conclusions: In summary :::: leads to following results: i) ::: ii) ::: iii) ::::
 
-See for example A.~Heikkinen (2008) \cite{heikkinen07bPaper} \cite{heikkinen07aPaper}
+
 
 
 
@@ -652,7 +652,7 @@ The double differential cross-sections for neutrons at angles of $7.5^{\circ}$, 
 
 \bibliographystyle{plain}  % Options plain, unsrt, alpha, abbrv
 
-\bibliography{refs.bib} %10 p
+\bibliography{ah09aProceedings.bib} %10 p
 
 %\include{notes}
 
