--- a/ah09aProceedings.bib
+++ b/ah09aProceedings.bib
@@ -1,3 +1,11 @@
+@INPROCEEDINGS{ah09aProceedings,		  
+author        = {A.~Heikkinen, A.~Boudard, G.~Folger, and P.~Kaitaniemi},
+title         = {A {Geant4} physics list for nuclear physics applications based on {INCL} and {ABLA} models},
+booktitle     = {},
+series        = {{\em Paper in preparation for CHEP 2009, 
+                 21 - 27 March 2009 Prague, Czech Republic}},
+}
+
 @INPROCEEDINGS{heikkinen07mProceedings,		  
 author        = {A.~Heikkinen, P.~Kaitaniemi, and A.~Boudard},
 title         = {Implementation of {INCL4} cascade and {ABLA} evaporation codes in {Geant4}},
@@ -6,10 +14,12 @@ note          = {International Conference on Computing in High Energy and Nuclea
                  {\sf [doi:10.1088/1742-6596/119/3/032024]}
 }
 
-@INPROCEEDINGS{ah09aProceedings,		  
-author        = {A.~Heikkinen, A.~Boudard, G.~Folger, and P.~Kaitaniemi},
-title         = {A {Geant4} physics list for nuclear physics applications based on {INCL} and {ABLA} models},
-booktitle     = {},
-series        = {{\em Paper in preparation for CHEP 2009, 
-                 21 - 27 March 2009 Prague, Czech Republic}},
-}
+@ARTICLE{heikkinen03aPaper,		  
+author        = {A.~Heikkinen with Geant4 collaboration},
+title         = {Geant4 - a simulation toolkit},
+journal       = {Nucl. Instr. and Meth.},
+volume        = {A},
+number        = {506},
+year          = {2003},
+pages         = {250--303},
+} 
