Validation notes added

--- a/notes.tex
+++ b/notes.tex
@@ -36,6 +36,10 @@ well) have to be handled by something else than INCL/ABLA.
 
 For documentation, {\tt Doxygen} seems to be the most promising tool.
 
+\subsubsection{Validation}
+
+Validation tools, strategy, datasets, and results.
+
 %The results of the direct measurements of the ::: flux are in good agreement 
 %with the results predicted from the ::: model
 %calculations made A.B, and C.D (KEK) and other collaborators.
